[CSS] - on mobile: bugfix for select-forms.
On mobile, on comment page: the select form would overflow if someone used a very long user-name.

--- a/admin/style/style-mobile-lt850px.css
+++ b/admin/style/style-mobile-lt850px.css
@@ -3,6 +3,9 @@
 	#axe {
 		padding: 20px 15px;
 	}
+	select {
+		max-width: 100%;
+	}
 
 	/* liste commentaires */
 	.commentbloc.foreground {
